# baseballteammanager

./: (original)baseball_manager.py  app.py  application.py  baseball_manager.py  line_up.csv  models.py  package-lock.json  pyproject.toml  realm_config.json  requirements.txt  wsgi.py
instance/: site.db
migrations/versions/: a6b630bbdb84_initial_migration.py
static/css/: styles.css
templates/: add_player.html  edit_player.html  index.html  login.html  register.html
